[metadata]
name = sensorizer
description = Timeseries data generation and preparation for batch jobs at scale
long_description = file: README.md
long_description_content_type = text/markdown
keywords = IoT, sensor
maintainer = jgaz@equinor.com
author = Jesus Gazol
author_email = jgaz@equinor.com
maintainer-email = jgaz@equinor.com
url = https://github.com/equinor/sensorizer
project_urls =
    Source=https://github.com/
    Tracker=https://github.com/
platforms = any
use_scm_version = True
license = GPL 3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.16.3
    fastavro>=0.22.13
    azure-eventhub==1.3.1

setup_requires =
    setuptools_scm

[options.packages.find]
where = src


[options.extras_require]
# This labels can be targeted by TOX (extras) to install in the different venvs
testing =
    pytest == 5.3.5
    pytest-cov

dev =
    pre-commit >= 2.1.1
    docker_compose

docs =
    sphinx >= 2.0.0, < 3
    towncrier >= 18.5.0
    pygments-github-lexers >= 0.0.5
    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1
